# src/Generated/Endpoint/DeleteAuthRoleIdentityCollection.php
@@ -4,15 +4,6 @@ namespace Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\End
 
 class DeleteAuthRoleIdentityCollection extends \Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Runtime\Client\BaseEndpoint implements \Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Runtime\Client\Endpoint
 {
-    /**
-     * Delete one or more role to identity assignments in this resource server
-     *
-     * @param \Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Model\AuthRoleIdentityResource[] $requestBody 
-     */
-    public function __construct(array $requestBody)
-    {
-        $this->body = $requestBody;
-    }
     use \Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Runtime\Client\EndpointTrait;
     public function getMethod() : string
     {
@@ -24,9 +15,6 @@ class DeleteAuthRoleIdentityCollection extends \Datenkraft\Backbone\Client\Fresh
     }
     public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null) : array
     {
-        if (is_array($this->body) and isset($this->body[0]) and $this->body[0] instanceof \Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Model\AuthRoleIdentityResource) {
-            return array(array('Content-Type' => array('application/json')), $serializer->serialize($this->body, 'json'));
-        }
         return array(array(), null);
     }
     public function getExtraHeaders() : array
@@ -76,6 +64,6 @@ class DeleteAuthRoleIdentityCollection extends \Datenkraft\Backbone\Client\Fresh
     }
     public function getAuthenticationScopes() : array
     {
-        return array();
+        return array('oAuthAuthorization', 'bearerAuth');
     }
 }
